# coral-engine

./: .clang-format  .cmake-format.yaml  CMakeLists.txt
include/: coral-engine.hpp  coral.hpp  file.hpp  log.hpp  node.hpp  reflection.hpp  resource-parser.hpp  resource.hpp  scene.hpp  string.hpp  typeless-vector.hpp  vector3.hpp  window.hpp
src/: coral-engine.cpp  file.cpp  node.cpp  resource-parser.cpp  resource.cpp  string.cpp  typeless-vector.cpp  window.cpp
